--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,43 @@
-*{
-    padding: 0px;
-    margin: 0px;
- }
-body{
-    background-color: #364F6B;
-    color: #F5F5F5;
+body {
+    font-family: 'Open Sans Condensed', sans-serif;
 }
 
-/* .box{
-    width: 60%;
-    margin: 150px auto;
-    background: white;
-    padding: 20px;
-    font-size: 15px;
- } */
+.rose-4{
+background-color: #004d61;
+}
 
-.navbar-example2{
-    background: purple;
-    padding: 10px 0px;
+nav ul a {
+    font-size: 19px;
+    color: black;
+    display: block;
+    cursor: pointer;
+    transition: background-color 0.3s ease 0s;
+    padding: 0px 15px;
+}
+
+.parallax-container {
+    height: 300px;
+  }
+ 
+p {
+    font-size: 20px;
     text-align: center;
-    position: absolute;
-    width: 100%;
-
- }
-
-#top{
-    margin: 0;
-    padding: 0;
 }
-
-.nav-link-img{
-    margin: 0;
-    padding: 0;
+h4{
+    margin: 25px;
 }
 
 #toolsBox{
-    background-color: #F5F5F5;
-    padding-bottom: 15px;
+    background-color: #348498; 
     padding-left: 15px;
-    width: 500px;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
 }
+
 .tools{
     width: 100px;
     display: inline-block;
     margin-top: 20px;
-}
+} 
+
