--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
+*{
+    margin: 0%;
+    padding: 0%;
+}
+
 body {
     font-family: 'Merriweather', serif;
 }
 
 .rose-4{
-background-color: #004d61!important; 
-flex-wrap: wrap;
-height: auto;
+    background-color: #004d61!important; 
+    flex-wrap: wrap;
+    height: auto;
 }
 
 
@@ -15,22 +20,20 @@ nav ul a {
     margin-top: 5px;;
 }
 
-a{
-    margin-left: 15px;
-    margin-top: 5px;
-}
 
 .parallax-container {
     height: 300px;
   }
  
-p {
+p{
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     text-align: center !important;
+    color: black;
 }
 h4{
     margin-right: 35px;
+    color: black;
 }
 
 .text{
@@ -54,5 +57,13 @@ margin-top:20px;
 
 .fa fa-github{
     background-color: black;
+}
+
+.card{
+    text-align: center
+}
+
+.links-text{
+    color: #348498;
 }
 
