--- a/css/style.css
+++ b/css/style.css
@@ -8,42 +8,41 @@ body {
 }
 
 .rose-4{
-    background-color: #004d61!important; 
+    background-color: #2b3595!important; 
     flex-wrap: wrap;
     height: 80px;
-    position: fixed;
-    z-index: 1000;
+    
 }
 
-
+nav{
+    position: fixed;
+    z-index: 9999;;
+}
 nav ul a {
     font-size: 19px;
     cursor: pointer;
-    margin-top: 5px;;
+    margin-top: 5px;
 }
 
-.parallax-container {
-    height: 300px;
-  }
  
 p{
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     text-align: center !important;
-    color: black;
+    color: #182952;
 }
 h4{
     margin-right: 35px;
-    color: black;
+    color: #7045af;
 }
 
 .text{
-padding: 40px;
+padding: 30px;
 margin-top:20px;
 }
 
 #toolsBox{
-    background-color: #348498; 
+    background-color: #7045af; 
     padding-left: 15px;
     text-align: center;
     margin-left: 20px;
@@ -55,16 +54,41 @@ margin-top:20px;
     display: inline-block;
     margin-top: 20px;
 } 
-
-.fa fa-github{
-    background-color: black;
-}
-
-.card{
-    text-align: center
-}
-
 .links-text{
-    color: #348498;
+    color: #2b3595;
 }
 
+.teal-text.text-darken-1 {
+    color:#2b3595 !important;
+    }
+
+.carousel{
+        width: 100%;
+    } 
+.demo{
+    width: 450px;
+}
+
+@media only screen and (max-width: 600px) {
+    h4{
+        margin-right: 10px;
+        color: #7045af;
+    }
+
+    p{
+        font-family: 'Poppins', sans-serif;
+        font-size: 15px;
+        text-align: center !important;
+        color: #182952;
+    }
+
+    .text{
+        padding: 25px;
+        margin-top:18px;
+        }
+
+    .demo{
+        width: 260px;
+        height: 300px;
+    }
+}
