--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
         margin: 0px;
         padding: 0px;
         background-color: #fefefe !important;
-        background-image: url('./bubble2.png');
+        background-image: url('../css/img/bubble2.png');
         background-size: 100px;
         background-repeat: initial;
     }
@@ -70,8 +70,8 @@ h4{
     margin-top: 70px;
 }
 #toolsBox{
-    margin: 0px 20px;
-    padding: 20px;
+    margin: 0px 10px;
+    padding: 10px;
     text-align: center; 
 }
 .text{
